<resources>
    <string name="app_name">TryTrading</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="login">Login</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="stock_name">Stock name</string>
    <string name="trading">Trading</string>
    <string name="book">Book</string>
    <string name="graph_visualization_of_changes_in_price">Graph visualization of changes in price</string>
    <string name="favorite">favorite</string>
</resources>