<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StockViewActivity">

    <TextView
        android:id="@+id/stockName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="177dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="39dp"
        android:text="@string/stock_name"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonBuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="450dp"
        android:text="@string/buy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonSell"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stockName"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonSell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="450dp"
        android:text="@string/sell"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonBuy"
        app:layout_constraintTop_toBottomOf="@+id/stockName"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="217dp"
        android:layout_marginEnd="86dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="214dp"
        android:text="@string/graph_visualization_of_changes_in_price"
        app:layout_constraintBottom_toTopOf="@+id/buttonBuy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stockName" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="205dp"
        android:layout_marginEnd="71dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="29dp"
        android:background="@color/white"
        android:contentDescription="@string/favorite"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/stockName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.526"
        app:srcCompat="@android:drawable/btn_star_big_off" />

</androidx.constraintlayout.widget.ConstraintLayout>